yml 설정파일 수정

--- a/_config.yml
+++ b/_config.yml
@@ -45,10 +45,10 @@ url: https://jaeorin.github.io
 baseurl: /
 
 # Website info
-title: IT Technical Training
+title: Blog
 # 자신의 blog title.
 
-description: IT기반기술교육 블로그
+description: 블로그 취미생활 하루일과
 # blog home에 표시될 blog에 대한 전반적인 설명.
 
 cover: assets/built/images/blog-cover1.png
@@ -60,10 +60,10 @@ logo_dark:
 favicon: assets/built/images/favicon.jpg
 # favicon으로 사용할 image
 
-production_url: https://moon9342.github.io/
+production_url: https://jaeorin.github.io
 # 최종적으로 blog가 운영될 url
 
-source_url: https://github.com/moon9342/GitHubPageMaker/
+source_url: https://github.com/jaeorin/GitHubPageMaker/
 # blogmaker(jekyll source folder)에 대한 github repository
 
 # Social info
@@ -110,7 +110,7 @@ feed:
 safe: False
 lsi: False
 
-username: moon9342
+username: jaeorin
 repo: GitHubPageMaker
 # username : travis-ci와 연동하는 github의 username
 # repo: travis-ci와 연동하는 github의 repository이름
@@ -121,7 +121,7 @@ branch: master
 
 relative_source:
 
-destination: ./output/
+destination: ../[GitHubPage]/
 # compile된 결과가 생성되는 폴더
 # 이 폴더안의 내용이 우리가 운영하는 블로그 내용이 컴파일되서 들어간다.
 # 이 폴더안의 내용을 github repository(https://username.github.io)에 push
